fix(tests): use temporal folders for envmodules integration test

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     short: marks tests as short (deselect with '-m "not short"')
     R: marks tests that need R (deselect with '-m "not R"')
     conda: marks tests that need conda (deselect with '-m "not conda"')
+    easybuild: marks tests that build software using easybuild
