--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,20 +34,20 @@ jobs:
           ruff check .
 
   # Step 2: Run tests only if linting passes
-  tests:
+  tests-linux:
     name: Run Tests
     needs: lint
     permissions: write-all
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
         python-version: ["3.12"]
         poetry-version: ["1.8.0"]
     defaults:
       run:
         shell: bash
-    runs-on: ${{ matrix.os }}
+
+    runs-on: ghcr.io/omnibenchmark/omnibenchmark-docker:latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -90,276 +90,20 @@ jobs:
 
       # Build wheel after short tests pass
       - name: Build wheel
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
         run: |
           pip install build
           python -m build .
 
       # Upload the wheel as an artifact
       - name: Upload wheel artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
         uses: actions/upload-artifact@v4
         with:
           name: omnibenchmark-wheel
           path: dist/*.whl
           retention-days: 7
 
-      - name: Run longer tests (integration)
-        run: |
-          poetry run pytest -m "not short and not conda" --cov=omnibenchmark --cov-report=xml:./reports/coverage.xml \
-              tests/benchmark tests/cli tests/workflow tests/io
-        if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
-
-      - name: Generate tests & coverage badges
-        run: |
-          poetry run genbadge tests -i ./reports/junit.xml -o ./reports/tests.svg
-          poetry run genbadge coverage -i ./reports/coverage.xml -o ./reports/coverage.svg
-
-      - if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12' && matrix.poetry-version == '1.8.0' && github.event.pull_request.head.repo.full_name == github.repository }}
-        name: Comment coverage result
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-xml-coverage-path: ./reports/coverage.xml
-
-  # Step 3: Run software tests only if regular tests pass
-  software-tests-linux:
-    name: Software Tests (Linux)
-    needs: tests
-    permissions: write-all
-    env:
-      LMOD_VERSION: "8.7.53"
-    strategy:
-      matrix:
-        os: [ubuntu-22.04]
-        test_group: [1, 2]
-        python-version: ["3.12"]
-      fail-fast: true
-
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Cache system dependencies
-        id: cache-system
-        uses: actions/cache@v4
-        with:
-          path: |
-            /opt/lmod
-            ~/.cache/pip
-          key: system-deps-${{ runner.os }}-${{ hashFiles('**/workflow.yml', '**/requirements.txt', '**/setup.py', '**/pyproject.toml') }}
-          restore-keys: |
-            system-deps-${{ runner.os }}-
-
-      - name: Install OS & Python packages
-        if: steps.cache-system.outputs.cache-hit != 'true'
-        run: |
-          sudo add-apt-repository -y ppa:apptainer/ppa
-          sudo apt-get update
-          sudo apt-get install lua5.2 liblua5.2-dev lua-filesystem lua-posix tcl tcl-dev wget unzip make
-
-          # Optional: fix for lua-posix bug
-          if [ ! -e /usr/lib/x86_64-linux-gnu/lua/5.2/posix.so ] ; then
-            sudo ln -s /usr/lib/x86_64-linux-gnu/lua/5.2/posix_c.so /usr/lib/x86_64-linux-gnu/lua/5.2/posix.so
-          fi
-
-          sudo apt-get install libopenmpi-dev openmpi-bin
-          pip install pep8 python-graph-core python-graph-dot
-
-      - name: Install LMOD from source
-        if: steps.cache-system.outputs.cache-hit != 'true'
-        run: |
-          wget https://github.com/TACC/Lmod/archive/refs/tags/${LMOD_VERSION}.zip
-          unzip ${LMOD_VERSION}.zip
-          cd Lmod-${LMOD_VERSION}
-
-          ./configure --prefix=/opt/lmod
-          make -j$(nproc)
-          sudo make install
-
-      - name: Extra OS / apt (apptainer)
-        if: steps.cache-system.outputs.cache-hit != 'true'
-        run: |
-          sudo apt install -y stress git wget openmpi-bin libopenmpi-dev apptainer debootstrap
-
-      - name: Modify python version in test env
-        shell: bash -el {0}
-        run: |
-          cp test-environment.yml test-environment-${{ matrix.python-version }}.yml
-          sed -E -i 's/- conda-forge::python.+/- conda-forge::python =${{ matrix.python-version }}/' test-environment-${{ matrix.python-version }}.yml
-
-      - name: Cache omnibenchmark environment
-        uses: actions/cache@v4
-        with:
-          path: |
-            /usr/share/miniconda3/envs
-            ~/conda_pkgs_dir
-            ~/.conda/pkgs
-            ~/.conda/envs/omnibenchmark
-            ~/.cache/pip
-          key: conda-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            conda-${{ runner.os }}-${{ matrix.python-version }}-
-            conda-${{ runner.os }}-
-
-      - name: Setup omnibenchmark environment
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniforge-version: latest
-          python-version: ${{ matrix.python-version }}
-          use-mamba: true
-          environment-file: test-environment-${{ matrix.python-version }}.yml
-          activate-environment: omnibenchmark
-
-      - name: Test
-        shell: bash -el {0}
-        run: |
-          conda info
-          conda list
-
-          # install the s3 and test extra dependencies
-          pip install -e ".[s3]"
-          pip install -e ".[test]"
-
-          # install required python dependencies
-          pip install numpy pandas scikit-learn scipy
-
-          cd tests/software
-
-          source /opt/lmod/lmod/${LMOD_VERSION}/init/bash
-          source "$LMOD_PKG"/init/profile
-
-          export MODULEPATH="$HOME"/.local/easybuild/modules/all:"$GITHUB_WORKSPACE"/tests/data/envs
-          module use $MODULEPATH
-
-          module spider 3.6.3-foss-2017b
-
-          # module spider
-          export PYTHONPATH=${PYTHONPATH}:$LMOD_DIR/../init
-
-          # invoke pytest
-          pytest -v -x --show-capture=stderr \
-              --splits 2 --group ${{ matrix.test_group }} --splitting-algorithm=least_duration \
-              cli_conda_tests.py cli_singularity_tests.py cli_envmodules_tests.py \
-              conda_tests.py singularity_tests.py envmodules_tests.py test_run_with_software.py
-
-  software-tests-mac:
-    name: Software Tests (macOS)
-    needs: tests
-    permissions: write-all
-    strategy:
-      matrix:
-        os: [macos-14]
-        test_group: [1, 2]
-        python-version: ["3.12"]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Cache system dependencies
-        id: cache-system
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/Library/Caches/Homebrew
-            ~/Library/Caches/pip
-            /opt/homebrew/var/homebrew/locks
-            /opt/homebrew/Library/Homebrew/vendor/gems
-          key: system-deps-${{ runner.os }}-${{ hashFiles('**/workflow.yml', '**/requirements.txt', '**/setup.py', '**/pyproject.toml') }}
-          restore-keys: |
-            system-deps-${{ runner.os }}-
-
-      - name: Set up Homebrew
-        id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-        if: matrix.os == 'macos-14' || matrix.os == 'macos-13'
-
-      - name: Install OS packages using homebrew
-        if: steps.cache-system.outputs.cache-hit != 'true'
-        shell: bash -el {0}
-        run: |
-          bash
-          brew upgrade
-          brew install coreutils
-          brew install lmod
-
-      - name: Modify python version in test env
-        shell: bash -el {0}
-        run: |
-          cp test-environment.yml test-environment-${{ matrix.python-version }}.yml
-          sed -E 's/- conda-forge::python.+/- conda-forge::python =${{ matrix.python-version }}/' test-environment-${{ matrix.python-version }}.yml > tmp.yml
-          mv tmp.yml test-environment-${{ matrix.python-version }}.yml
-
-      - name: Cache omnibenchmark environment
-        uses: actions/cache@v4
-        with:
-          path: |
-            /Users/runner/miniconda3/envs
-            ~/conda_pkgs_dir
-            ~/.conda/pkgs
-            ~/.conda/envs/omnibenchmark
-            ~/.cache/pip
-          key: conda-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            conda-${{ runner.os }}-${{ matrix.python-version }}-
-            conda-${{ runner.os }}-
-
-      - name: Setup omnibenchmark environment
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniforge-version: latest
-          python-version: ${{ matrix.python-version }}
-          use-mamba: true
-          environment-file: test-environment-${{ matrix.python-version }}.yml
-          activate-environment: omnibenchmark
-
-      - name: Modify bashrc
-        shell: bash -el {0}
-        run: |
-          cat <<'EOF' >>~/.bashrc
-          if [ -f /opt/homebrew/opt/lmod/init/bash ]; then
-               source /opt/homebrew/opt/lmod/init/profile
-          fi
-          if [ -f /usr/local/opt/lmod/init/bash ]; then
-               source /usr/local/opt/lmod/init/profile
-          fi
-          export R_LIBS=~/work/Rlib
-          EOF
-
-          cat <<'EOF' >>~/.bash_profile
-          source ~/.bashrc
-          EOF
-
-      - name: Test
-        shell: bash -el {0}
-        run: |
-          source "${CONDA}/etc/profile.d/conda.sh"
-          conda activate omnibenchmark
-          conda info
-          conda list
-
-          # install the s3 and test extra dependencies
-          pip install -e ".[s3]"
-          pip install -e ".[test]"
-
-          # install required Python dependenices
-          pip install numpy pandas scikit-learn scipy
-
-          cd tests/software
-
-          source /opt/homebrew/opt/lmod/init/bash
-          source "$LMOD_PKG"/init/profile
-
-          export MODULEPATH="$HOME"/.local/easybuild/modules/all:"$GITHUB_WORKSPACE"/tests/data/envs
-          module use $MODULEPATH
-
-          export PYTHONPATH=${PYTHONPATH}:$LMOD_DIR/../init
-
-          pytest -v -x --show-capture=stderr \
-               --splits 2 --group ${{ matrix.test_group }} \
-               conda_tests.py envmodules_tests.py cli_envmodules_tests.py cli_conda_tests.py test_run_with_software.py \
-               -k 'not test_easybuild_sys_toolchain_build'
+      #- name: Run longer tests (integration)
+      #  run: |
+      #poetry run pytest -m "not short and not conda" --cov=omnibenchmark --cov-report=xml:./reports/coverage.xml \
+      #        tests/benchmark tests/cli tests/workflow tests/io
+      #  if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
